# opcua-http-server

./: Cargo.toml  devenv.nix  nodes.toml  nodes.yml  opcua.conf
src/: http.rs  lib.rs  main.rs  opcua.rs
