[package]
name = "opcua-http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-opcua-server = "0.18.0"
async-opcua-types = "0.18.0"
axum = { version = "0.8.9", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1.52.1"
tower = "0.5.3"
